--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 pip
-git+git://https://github.com/Bunny-Hana/S.H.T-Nancy/testancy.py.git#egg=discord.py
+git+git://https://github.com/Bunny-Hana/S.H.T-Nancy/testancy.py#egg=discord.py
